--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>site 2</title>
-    <link rel="shortcut icon" href="icons8-shrek-16 - Copia.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="icons8-shrek-16.png" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
